// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagePlanAccessibleFormatTemplate when a template has been selected should match snapshot for empty state for letter type (x1) 1`] = `
<div>
  <div
    class="channel-template-outer"
    data-testid="channel-template-x1"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Large print letter (optional)
      </h3>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="choose-template-link-x1"
            href="/message-plans/choose-large-print-letter-template/test-routing-config-id?lockNumber=42"
          >
            Choose
            <span
              class="nhsuk-u-visually-hidden"
            >
              Large print letter
            </span>
             
            template
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanAccessibleFormatTemplate when a template has been selected should match snapshot for template selected state for letter type (x1) 1`] = `
<div>
  <div
    class="channel-template-outer"
    data-testid="channel-template-x1"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Large print letter (optional)
      </h3>
      <div
        class="nhsuk-u-margin-bottom-2"
        data-testid="template-names"
      >
        <p
          class="nhsuk-u-margin-bottom-1"
          data-testid="template-name-x1"
        >
          Large print letter template
        </p>
      </div>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="change-template-link-x1"
            href="/message-plans/choose-large-print-letter-template/test-routing-config-id?lockNumber=42"
          >
            Change
            <span
              class="nhsuk-u-visually-hidden"
            >
              Large print letter
            </span>
             
            template
          </a>
        </li>
        <li>
          <form>
            <input
              name="routingConfigId"
              readonly=""
              type="hidden"
              value="test-routing-config-id"
            />
            <input
              name="lockNumber"
              readonly=""
              type="hidden"
              value="42"
            />
            <input
              name="templateId"
              readonly=""
              type="hidden"
              value="test-large-print-id"
            />
            <button
              class="channel-template-link--remove nhsuk-link"
              data-testid="remove-template-link-x1"
              formaction="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
              type="submit"
            >
              Remove
              <span
                class="nhsuk-u-visually-hidden"
              >
                Large print letter
              </span>
               
              template
            </button>
          </form>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for empty state (EMAIL) 1`] = `
<div>
  <div
    class="channel-template-outer"
    data-testid="channel-template-EMAIL"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Email
      </h3>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="choose-template-link-EMAIL"
            href="/message-plans/choose-email-template/test-routing-config-id?lockNumber=42"
          >
            Choose
            <span
              class="nhsuk-u-visually-hidden"
            >
              Email
            </span>
             
            template
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for empty state (LETTER) 1`] = `
<div>
  <div
    class="channel-template-outer"
    data-testid="channel-template-LETTER"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Standard English letter
      </h3>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="choose-template-link-LETTER"
            href="/message-plans/choose-standard-english-letter-template/test-routing-config-id?lockNumber=42"
          >
            Choose
            <span
              class="nhsuk-u-visually-hidden"
            >
              Standard English letter
            </span>
             
            template
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for empty state (NHSAPP) 1`] = `
<div>
  <div
    class="channel-template-outer"
    data-testid="channel-template-NHSAPP"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        NHS App
      </h3>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="choose-template-link-NHSAPP"
            href="/message-plans/choose-nhs-app-template/test-routing-config-id?lockNumber=42"
          >
            Choose
            <span
              class="nhsuk-u-visually-hidden"
            >
              NHS App
            </span>
             
            template
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for empty state (SMS) 1`] = `
<div>
  <div
    class="channel-template-outer"
    data-testid="channel-template-SMS"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Text message (SMS)
      </h3>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="choose-template-link-SMS"
            href="/message-plans/choose-text-message-template/test-routing-config-id?lockNumber=42"
          >
            Choose
            <span
              class="nhsuk-u-visually-hidden"
            >
              Text message (SMS)
            </span>
             
            template
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for selected template state (EMAIL) 1`] = `
<div>
  <div
    class="channel-template-outer"
    data-testid="channel-template-EMAIL"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Email
      </h3>
      <div
        class="nhsuk-u-margin-bottom-2"
        data-testid="template-names"
      >
        <p
          class="nhsuk-u-margin-bottom-1"
          data-testid="template-name-EMAIL"
        >
          Covid 65+ reminder v1
        </p>
      </div>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="change-template-link-EMAIL"
            href="/message-plans/choose-email-template/test-routing-config-id?lockNumber=42"
          >
            Change
            <span
              class="nhsuk-u-visually-hidden"
            >
              Email
            </span>
             
            template
          </a>
        </li>
        <li>
          <form>
            <input
              name="routingConfigId"
              readonly=""
              type="hidden"
              value="test-routing-config-id"
            />
            <input
              name="lockNumber"
              readonly=""
              type="hidden"
              value="42"
            />
            <input
              name="templateId"
              readonly=""
              type="hidden"
              value="test-id"
            />
            <button
              class="channel-template-link--remove nhsuk-link"
              data-testid="remove-template-link-EMAIL"
              formaction="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
              type="submit"
            >
              Remove
              <span
                class="nhsuk-u-visually-hidden"
              >
                Email
              </span>
               
              template
            </button>
          </form>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for selected template state (LETTER) 1`] = `
<div>
  <div
    class="channel-template-outer"
    data-testid="channel-template-LETTER"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Standard English letter
      </h3>
      <div
        class="nhsuk-u-margin-bottom-2"
        data-testid="template-names"
      >
        <p
          class="nhsuk-u-margin-bottom-1"
          data-testid="template-name-LETTER"
        >
          Covid 65+ reminder v1
        </p>
      </div>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="change-template-link-LETTER"
            href="/message-plans/choose-standard-english-letter-template/test-routing-config-id?lockNumber=42"
          >
            Change
            <span
              class="nhsuk-u-visually-hidden"
            >
              Standard English letter
            </span>
             
            template
          </a>
        </li>
        <li>
          <form>
            <input
              name="routingConfigId"
              readonly=""
              type="hidden"
              value="test-routing-config-id"
            />
            <input
              name="lockNumber"
              readonly=""
              type="hidden"
              value="42"
            />
            <input
              name="templateId"
              readonly=""
              type="hidden"
              value="test-id"
            />
            <button
              class="channel-template-link--remove nhsuk-link"
              data-testid="remove-template-link-LETTER"
              formaction="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
              type="submit"
            >
              Remove
              <span
                class="nhsuk-u-visually-hidden"
              >
                Standard English letter
              </span>
               
              template
            </button>
          </form>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for selected template state (NHSAPP) 1`] = `
<div>
  <div
    class="channel-template-outer"
    data-testid="channel-template-NHSAPP"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        NHS App
      </h3>
      <div
        class="nhsuk-u-margin-bottom-2"
        data-testid="template-names"
      >
        <p
          class="nhsuk-u-margin-bottom-1"
          data-testid="template-name-NHSAPP"
        >
          Covid 65+ reminder v1
        </p>
      </div>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="change-template-link-NHSAPP"
            href="/message-plans/choose-nhs-app-template/test-routing-config-id?lockNumber=42"
          >
            Change
            <span
              class="nhsuk-u-visually-hidden"
            >
              NHS App
            </span>
             
            template
          </a>
        </li>
        <li>
          <form>
            <input
              name="routingConfigId"
              readonly=""
              type="hidden"
              value="test-routing-config-id"
            />
            <input
              name="lockNumber"
              readonly=""
              type="hidden"
              value="42"
            />
            <input
              name="templateId"
              readonly=""
              type="hidden"
              value="test-id"
            />
            <button
              class="channel-template-link--remove nhsuk-link"
              data-testid="remove-template-link-NHSAPP"
              formaction="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
              type="submit"
            >
              Remove
              <span
                class="nhsuk-u-visually-hidden"
              >
                NHS App
              </span>
               
              template
            </button>
          </form>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for selected template state (SMS) 1`] = `
<div>
  <div
    class="channel-template-outer"
    data-testid="channel-template-SMS"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Text message (SMS)
      </h3>
      <div
        class="nhsuk-u-margin-bottom-2"
        data-testid="template-names"
      >
        <p
          class="nhsuk-u-margin-bottom-1"
          data-testid="template-name-SMS"
        >
          Covid 65+ reminder v1
        </p>
      </div>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="change-template-link-SMS"
            href="/message-plans/choose-text-message-template/test-routing-config-id?lockNumber=42"
          >
            Change
            <span
              class="nhsuk-u-visually-hidden"
            >
              Text message (SMS)
            </span>
             
            template
          </a>
        </li>
        <li>
          <form>
            <input
              name="routingConfigId"
              readonly=""
              type="hidden"
              value="test-routing-config-id"
            />
            <input
              name="lockNumber"
              readonly=""
              type="hidden"
              value="42"
            />
            <input
              name="templateId"
              readonly=""
              type="hidden"
              value="test-id"
            />
            <button
              class="channel-template-link--remove nhsuk-link"
              data-testid="remove-template-link-SMS"
              formaction="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
              type="submit"
            >
              Remove
              <span
                class="nhsuk-u-visually-hidden"
              >
                Text message (SMS)
              </span>
               
              template
            </button>
          </form>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanLanguageTemplate when multiple templates are selected should match snapshot for empty state 1`] = `
<div>
  <div
    class="channel-template-outer"
    data-testid="channel-template-foreign-language"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Other language letters (optional)
      </h3>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="choose-template-link-foreign-language"
            href="/message-plans/choose-other-language-letter-template/test-routing-config-id?lockNumber=42"
          >
            Choose
            <span
              class="nhsuk-u-visually-hidden"
            >
              Other language letters
            </span>
             
            templates
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanLanguageTemplate when multiple templates are selected should match snapshot with multiple templates selected 1`] = `
<div>
  <div
    class="channel-template-outer"
    data-testid="channel-template-foreign-language"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Other language letters (optional)
      </h3>
      <div
        class="nhsuk-u-margin-bottom-2"
        data-testid="template-names"
      >
        <p
          class="nhsuk-u-margin-bottom-1"
          data-testid="template-name-foreign-language"
        >
          Welsh letter template
        </p>
        <p
          class="nhsuk-u-margin-bottom-1"
          data-testid="template-name-foreign-language"
        >
          Polish letter template
        </p>
      </div>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="change-template-link-foreign-language"
            href="/message-plans/choose-other-language-letter-template/test-routing-config-id?lockNumber=42"
          >
            Change
            <span
              class="nhsuk-u-visually-hidden"
            >
              Other language letters
            </span>
             
            templates
          </a>
        </li>
        <li>
          <form>
            <input
              name="routingConfigId"
              readonly=""
              type="hidden"
              value="test-routing-config-id"
            />
            <input
              name="lockNumber"
              readonly=""
              type="hidden"
              value="42"
            />
            <input
              name="templateId"
              readonly=""
              type="hidden"
              value="welsh-template-id"
            />
            <input
              name="templateId"
              readonly=""
              type="hidden"
              value="polish-template-id"
            />
            <button
              class="channel-template-link--remove nhsuk-link"
              data-testid="remove-template-link-foreign-language"
              formaction="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
              type="submit"
            >
              Remove all
              <span
                class="nhsuk-u-visually-hidden"
              >
                Other language letters
              </span>
               
              templates
            </button>
          </form>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
